--- a/app/app.scss
+++ b/app/app.scss
@@ -358,7 +358,7 @@ ul.ul-style {
 }
 
 .navbar {
-    background-color: $retro-dark-green !important;
+    background-color: $gradient-purple !important;
     border: 2px solid black;
     // box-shadow: -16px 20px 0px 2px rgba(0, 0, 0, 1);
 }
