--- a/app/variables.module.scss
+++ b/app/variables.module.scss
@@ -7,6 +7,7 @@ $green: rgba(81, 175, 125, 1);
 $pink: rgb(204, 105, 122);
 $slate-gray: #36453b;
 $retro-purple: #b34bca;
+$gradient-purple: rgba(131, 58, 180, 1);
 $retro-light-purple: #c88ed5;
 $retro-vlight-purple: #EBA7FA;
 $retro-blue: #272760;
@@ -24,6 +25,7 @@ $retro-dark-green: #459b86;
     pink: $pink;
     slate-gray: $slate-gray;
     retro-purple: $retro-purple;
+    gradient-purple: $gradient-purple;
     retro-blue: $retro-blue;
     retro-light-green: $retro-light-green;
     retro-dark-green: $retro-dark-green;
